tmp/funnel-output_path-HIhXjLS1.tmp/gyak09/tests/unit/pods/errors/new/route-test.jshint.js
/home/ubuntu/workspace/csaladitodo/tmp/jshinter-output_path-euVAW1gG.tmp/unit/pods/errors/new/route-test.jshint.js